# mithai

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC-binary-installer.md  config.single-agent.yaml  config.yaml  install.sh  mithai.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  promote-stable.yml  release.yml
deploy/: .dockerignore  DEPLOY.md  Dockerfile  Makefile
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  rbac.yaml
docs/: concepts.md  configuration.md  deployment.md  examples.md  getting-started.md  index.md  security.md  skills-reference.md  slack-manifest.yaml  testing.md  troubleshooting.md  your-first-skill.md
docs-site/: astro.config.mjs  migrate.py  package-lock.json  package.json
docs-site/public/: _routes.json
docs/plans/: 2026-06-08-001-fix-docs-drift-audit-0.8.2-tag-plan.md
skills/aws/: prompt.md  tools.py
skills/cicd/: prompt.md  tools.py
skills/code_review/: prompt.md  tools.py
skills/exception_fixer/: prompt.md  tools.py
skills/github/: prompt.md  tools.py
skills/http_checker/: SKILL.md  prompt.md  tools.py
skills/kubernetes/: SKILL.md  prompt.md  tools.py
skills/last9/: prompt.md  (+1 more)
tests/: conftest.py  test_agent_create.py  test_api_adapter.py  test_cli_adapter.py  test_code_review_skill.py  test_config.py  test_doctor_cmd.py  test_engine_extra_system_prompt.py  test_engine_images.py  test_engine_late_bind_roster.py  test_engine_tool_xml_leak.py  test_exception_fixer_skill.py  test_formatters.py  test_github_skill.py  test_heartbeat.py  test_human_mcp.py  test_init_cmd.py  test_k8s_skill_e2e.py  test_kubernetes_skill.py  test_listen_mode.py  test_llm_bedrock.py  test_llm_bedrock_translate.py  test_llm_dispatch.py  test_mcp_manager.py  test_memory_backend.py  test_memory_flock.py  test_memory_skill.py  test_multi_agent.py  test_nudge.py  test_onboarding.py  test_reflection.py  test_scheduling_skill.py  test_session.py  test_skill_loader.py  test_skill_loader_mcp.py  test_slack_client.py  test_slack_events_endpoint.py  test_slack_http_adapter.py  test_slack_skill.py  test_state.py  (+9 more)
(+102 files in other folders)
