[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mithai"
version = "0.12.0"
description = "AI agent framework for organizations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Nishant Modak" },
]
keywords = ["chatops", "ai", "llm", "devops", "infrastructure", "slack", "telegram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.2.2",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
slack = ["slack-bolt>=1.18.0", "starlette>=1.3.1", "uvicorn>=0.30.0", "anyio>=3.0"]
telegram = ["python-telegram-bot>=21.0"]
mcp = ["mcp>=1.0.0"]
redis = ["redis>=5.0.0"]
s3 = ["boto3>=1.34.0"]
bedrock = ["boto3>=1.34.0"]
ui = [
    "starlette>=1.3.1",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "last9-genai>=0.1.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "pyinstaller>=6.0",
    "starlette>=1.3.1",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.scripts]
mithai = "mithai.cli.main:cli"

[project.urls]
Homepage = "https://github.com/last9/mithai"
Repository = "https://github.com/last9/mithai"
Issues = "https://github.com/last9/mithai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mithai"]

[tool.hatch.build.targets.wheel.force-include]
skills = "mithai/skills"

[tool.hatch.build.targets.sdist.force-include]
skills = "skills"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
